--- a/menuYingShi.html
+++ b/menuYingShi.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagine在线影视</title>
     <link rel="stylesheet" href="menuYingShi.css">
+    <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
     <div class="sidebar"> <!--侧边导航栏div-->
