--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagine网站导航</title>
     <link rel="stylesheet" href="index.css">
-
+    <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
     <div class="sidebar"> <!--侧边导航栏div-->
