添加背景图片，设置透明度

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
+    <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.6">
+        <img src="./bg.jpg" width="100%" height="100%"/>
+    </div>
+    
     <div class="sidebar"> <!--侧边导航栏div-->
         <div class="logo">
             <a href="https://www.baidu.com/" target="_self">Imagine网站导航</a>
         </div>
         <div class="menu">
             <ul>
-                <li class="menu-Classes"><a href="./menuYingShi.html" target="_self">💿在线影视</a></li>
-                <li class="menu-Classes">🔧其他项目仍在开发中...</li>
+                <li class="menu-Classes"><a href="./menuYingShi.html" target="_self">&nbsp;&nbsp;&nbsp;&nbsp;💿在线影视</a></li>
+                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;🔧其他项目仍在开发中...</li>
             </ul>
         </div>
     </div>
