--- a/menuYingShi.html
+++ b/menuYingShi.html
@@ -9,14 +9,18 @@
     <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
+    <div id="Layer2" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.5">
+        <img src="./bg2.jpg" width="100%" height="100%"/>
+    </div>
+
     <div class="sidebar"> <!--侧边导航栏div-->
         <div class="logo">
             <a href="https://www.baidu.com/" target="_self">Imagine网站导航</a>
         </div>
         <div class="menu">
             <ul>
-                <li class="menu-Classes">💿在线影视</li>
-                <li class="menu-Classes">🔧其他项目仍在开发中...</li>
+                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;💿在线影视</li>
+                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;🔧其他项目仍在开发中...</li>
             </ul>
         </div>
     </div>
@@ -25,16 +29,17 @@
         <div class="big-head d-flex">
             <h2><a href="https://www.nbwz.com/dianying/">在线影视</a></h2>
         </div>
+        <br>
         <div class="big-body">
             <div class="row row-cols-2 row-cols-sm-3 row-cols-md-4 row-cols-lg-4 row-cols-xl-6 g-0">
                 <div class="col">
                     <div class="s">
                         <ul>
                             <li><a class="t h" href="https://www.voflix.com/" target="_blank">VoFlix影视</a><p class="litle">—— 个 人 推 荐</p></li>
-                            <li><a class="t h" href="https://klyingshi.com/" target="_blank">可乐影视</a></li>
-                            <li><a class="t h" href="https://www.libvio.me/" target="_blank">LIBVIO影视</a></li>
-                            <li><a class="t h" href="https://ddrk.me/" target="_blank">低端影视</a></li>
-                            <li><a class="t h" href="#" target="_blank">#</a></li>
+                            <br><li><a class="t h" href="https://klyingshi.com/" target="_blank">可乐影视</a></li>
+                            <br><li><a class="t h" href="https://www.libvio.me/" target="_blank">LIBVIO影视</a></li>
+                            <br><li><a class="t h" href="https://ddrk.me/" target="_blank">低端影视</a></li>
+                            <br><li><a class="t h" href="#" target="_blank">#</a></li>
                         </ul>
                     </div>
                 </div>
