--- a/index.html
+++ b/index.html
@@ -15,21 +15,27 @@
     
     <div class="sidebar"> <!--侧边导航栏div-->
         <div class="logo">
-            <a href="https://www.baidu.com/" target="_self">Imagine网站导航</a>
+            <a href="#" target="_self">Imagine网站导航</a>
         </div>
         <div class="menu">
             <ul>
-                <li class="menu-Classes"><a href="./menuYingShi.html" target="_self">&nbsp;&nbsp;&nbsp;&nbsp;💿在线影视</a></li>
-                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;🔧其他项目仍在开发中...</li>
+                <label><li class="menu-Classes"><a href="./menuYingShi.html" target="_self">💿在线影视</a></li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
             </ul>
         </div>
     </div>
 
     <div class="rightBody">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;欢迎来到Imagine的测试网站导航页面
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;目前本网站还不兼容手机端（竖屏模式）
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;横屏模式下，与高宽比较为正常，显示比较合理
-        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;正在学习，还请见谅！
+        欢迎来到Imagine的测试网站导航页面
+        <br>目前本网站还不兼容手机端（竖屏模式）
+        <br>横屏模式下，与高宽比较为正常，显示比较合理
+        <br>正在学习，还请见谅！
     </div>
 </body>
 </html>
