--- a/menuYingShi.html
+++ b/menuYingShi.html
@@ -9,18 +9,24 @@
     <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
-    <div id="Layer2" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.5">
+    <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.6">
         <img src="./bg2.jpg" width="100%" height="100%"/>
     </div>
-
+    
     <div class="sidebar"> <!--侧边导航栏div-->
         <div class="logo">
-            <a href="https://www.baidu.com/" target="_self">Imagine网站导航</a>
+            <a href="#" target="_self">Imagine网站导航</a>
         </div>
         <div class="menu">
             <ul>
-                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;💿在线影视</li>
-                <li class="menu-Classes">&nbsp;&nbsp;&nbsp;&nbsp;🔧其他项目仍在开发中...</li>
+                <label><li class="menu-Classes"><a href="./menuYingShi.html" target="_self">💿在线影视</a></li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
+                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
             </ul>
         </div>
     </div>
