重新排版 优化显示

--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagine网站导航</title>
+    <title>Imagine's网站导航</title>
+    <link rel="icon" href="./images/Me.ico">
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="./Me.ico">
 </head>
 <body>
-    <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%;opacity:0.6">
-        <img src="./bg.jpg" width="100%" height="100%"/>
-    </div>
-    
-    <div class="sidebar"> <!--侧边导航栏div-->
-        <div class="logo">
-            <a href="#" target="_self">Imagine网站导航</a>
-        </div>
-        <div class="menu">
-            <ul>
-                <label><li class="menu-Classes"><a href="./menuYingShi.html" target="_self">💿在线影视</a></li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-                <label><li class="menu-Classes">🔧其他项目仍在开发中...</li></label>
-            </ul>
-        </div>
+    <div class="logo">
+        <a href="#">
+            <h2>Imagine's网站导航</h2>
+        </a>
     </div>
 
-    <div class="rightBody">
-        欢迎来到Imagine的测试网站导航页面
-        <br>目前本网站还不兼容手机端（竖屏模式）
-        <br>横屏模式下，与高宽比较为正常，显示比较合理
-        <br>正在学习，还请见谅！
+    <div class="nav">
+        <ul>
+            <li><a href="#" class="classes">影视导航</a></li>
+            <li class="classes">施工中...</li>
+            <li class="classes">施工中...</li>
+            <li class="classes">施工中...</li>
+        </ul>
+    </div>
+    
+    <div class="con">
+        <div class="main">
+            <a href="https://www.voflix.com" target="_blank">VoFlix影视</a>
+        </div>
+        <div class="fmain">
+            <ul>
+                <li><a class="gmain" href="https://www.libvio.com/" target="_blank">LibVio影视</a></li>
+                <li><a class="gmain" href="https://ddrk.me/" target="_blank">低端影视</a></li>
+                <li><a class="gmain" href="#">未发现...</a></li>
+                <li><a class="gmain" href="https://klyingshi.com/" target="_blank">可乐影视</a></li> 
+            </ul>
+        </div>
     </div>
 </body>
 </html>
