--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </div>
         <div class="fmain">
             <ul>
-                <li><a class="gmain" href="https://www.libvio.com/" target="_blank">LibVio影视</a></li>
-                <li><a class="gmain" href="https://ddrk.me/" target="_blank">低端影视</a></li>
+                <li><a class="gmain" href="https://www.libvio.me/" target="_blank">LibVio影视</a></li>
+                <li><a class="gmain" href="https://ddys2.me/" target="_blank">低端影视</a></li>
                 <li><a class="gmain" href="#">未发现...</a></li>
                 <li><a class="gmain" href="https://klyingshi.com/" target="_blank">可乐影视</a></li> 
             </ul>
