添加破解网站栏目

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <div class="nav">
         <ul>
-            <li><a href="#" class="classes">影视导航</a></li>
-            <li class="classes">施工中...</li>
-            <li class="classes">施工中...</li>
-            <li class="classes">施工中...</li>
+            <li><a href="#main" class="classes">影视导航</a></li>
+            <li><a href="#mainWebSite" class="classes">破解网站</a></li>
+            <li><a href="#" class="classes">施工中...</a></li>
+            <li><a href="#" class="classes">施工中...</a></li>
         </ul>
     </div>
 
@@ -29,7 +29,7 @@
         </iframe>
     </div>
     
-    <div class="con">
+    <div class="con" id="main">
         <div class="main">
             <a href="https://www.voflix.com" target="_blank">VoFlix影视</a>
         </div>
@@ -39,6 +39,20 @@
                 <li><a class="gmain" href="https://ddys2.me/" target="_blank">低端影视</a></li>
                 <li><a class="gmain" href="#">未发现...</a></li>
                 <li><a class="gmain" href="https://klyingshi.com/" target="_blank">可乐影视</a></li> 
+            </ul>
+        </div>
+    </div>
+    <br><br><br>
+    <div class="con" id="mainWebSite">
+        <div class="mainWebSite">
+            <a href="https://www.kelongwo.com/" target="_blank">克隆窝</a>
+        </div>
+        <div class="fmainWebSite">
+            <ul>
+                <li><a class="gmainWebSite" href="#" target="_blank">未发现...</a></li>
+                <li><a class="gmainWebSite" href="https://www.fy6b.com/" target="_blank">枫音应用</a></li>
+                <li><a class="gmainWebSite" href="#">未发现...</a></li>
+                <li><a class="gmainWebSite" href="#" target="_blank">未发现...</a></li> 
             </ul>
         </div>
     </div>
