--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="logo">
         <a href="#">
-            <h2>Imagine's网站导航</h2>
+            <img src="./images/Me.ico">Imagine's网站导航
         </a>
     </div>
 
