--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="nav">
         <ul>
             <li><a href="#main" class="classes">影视导航</a></li>
-            <li><a href="#mainWebSite" class="classes">破解网站</a></li>
+            <li><a href="#mainWebSite" class="classes">工具网站</a></li>
             <li><a href="#" class="classes">施工中...</a></li>
             <li><a href="#" class="classes">施工中...</a></li>
         </ul>
@@ -49,10 +49,10 @@
         </div>
         <div class="fmainWebSite">
             <ul>
-                <li><a class="gmainWebSite" href="#" target="_blank">未发现...</a></li>
+                <li><a class="gmainWebSite" href="https://www.zsxcool.com/" target="_blank">字节智造</a></li>
                 <li><a class="gmainWebSite" href="https://www.fy6b.com/" target="_blank">枫音应用</a></li>
-                <li><a class="gmainWebSite" href="#">未发现...</a></li>
-                <li><a class="gmainWebSite" href="#" target="_blank">未发现...</a></li> 
+                <li><a class="gmainWebSite" href="https://modyolo.com/" target="_blank">modYOLO</a></li>
+                <li><a class="gmainWebSite" href="https://liteapks.com/" target="_blank">liteAPKS</a></li> 
             </ul>
         </div>
     </div>
