--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="#main" class="classes">影视导航</a></li>
             <li><a href="#mainWebSite" class="classes">工具网站</a></li>
-            <li><a href="#" class="classes">施工中...</a></li>
+            <li><a href="#study" class="classes">个人使用</a></li>
             <li><a href="#" class="classes">施工中...</a></li>
         </ul>
     </div>
@@ -54,6 +54,12 @@
                 <li><a class="gmainWebSite" href="https://modyolo.com/" target="_blank">modYOLO</a></li>
                 <li><a class="gmainWebSite" href="https://liteapks.com/" target="_blank">liteAPKS</a></li> 
             </ul>
+        </div>
+    </div>
+    <br><br><br>
+    <div class="con" id="study">
+        <div class="mainWebSite">
+            <a href="./遥感数字图像质量改善.svg">遥感数字图像质量改善思维导图</a>
         </div>
     </div>
 </body>
